Fully Functional HTML with Simon Says Game

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -60,13 +60,34 @@
 
 
 
-<!-- LOGIN -->
+<!-- LOGIN FORM -->
 <div class='col-sm-2 col-sm-offset-5' id='form-login'>
   <p>Log In</p>
   <input name='username' type='text' class='form-control center-block' id='username-input' placeholder='User Name: '>
   <input name='password' type='text' class='form-control center-block' id='password-input' placeholder='Password: '>
 </div>
-<!-- LOGIN -->
+<!-- LOGIN FORM -->
+
+
+<div class='col-sm-12 simon-says'>
+<!-- SIMON SAYS GAME -->
+  <ul class='simon-says-circle'>
+    <li>
+      <div class='text'></div>
+    </li>
+    <li>
+      <div class='text'></div>
+    </li>
+    <li>
+      <div class='text'></div>
+    </li>
+    <li>
+      <div class='text'></div>
+    </li>
+  </ul>
+<!-- SIMON SAYS GAME -->
+</div>
+
 
 
 
