--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -144,3 +144,86 @@ p {
 	bottom: 110px;
 }
 
+
+
+
+/*SIMON SAYS GAME*/
+
+.simon-says {
+	padding-top: 100px;
+}
+
+.simon-says-circle {
+  background-position: center;
+  position: relative;
+  padding: 0;
+  margin: 1em auto;
+  width: 20em;
+  height: 20em;
+  border-radius: 50%;
+  list-style: none;
+  overflow: hidden;
+}
+
+li {
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50%;
+  height: 50%;
+  transform-origin: 0% 100%;
+}
+
+.text {
+  position: absolute;
+  left: -100%;
+  width: 200%;
+  height: 200%;
+  text-align: center;
+  transform: rotate(30deg); /*THIS ROTATES THE TEXT*/
+  padding-top: 20px;
+}
+
+li:first-child {
+  transform: rotate(0deg);
+}
+
+li:nth-child(2) {
+  transform: rotate(90deg);
+}
+
+li:nth-child(3) {
+  transform: rotate(180deg);
+}
+
+li:nth-child(4) {
+  transform: rotate(270deg);
+}
+
+li:first-child .text {
+  background: blue;
+}
+
+li:nth-child(2) .text {
+  background: grey;
+}
+
+li:nth-child(3) .text {
+  background: aqua;
+}
+
+li:nth-child(4) .text {
+  background: white;
+}
+
+
+
+
+
+
+
+
+
+
+
