--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -148,75 +148,121 @@ p {
 
 
 /*SIMON SAYS GAME*/
-
-.simon-says {
-	padding-top: 100px;
+body {
+	font-family: Arial, serif;
+	color: #333;
+	-webkit-user-select: none; /* Chrome/Safari */        
 }
 
-.simon-says-circle {
-  background-position: center;
-  position: relative;
-  padding: 0;
-  margin: 1em auto;
-  width: 20em;
-  height: 20em;
-  border-radius: 50%;
-  list-style: none;
-  overflow: hidden;
+ul {
+	list-style: none;
 }
 
-li {
-  overflow: hidden;
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 50%;
-  height: 50%;
-  transform-origin: 0% 100%;
+ul, li {
+	padding: 0;
+	margin: 0;
 }
 
-.text {
-  position: absolute;
-  left: -100%;
-  width: 200%;
-  height: 200%;
-  text-align: center;
-  transform: rotate(30deg); /*THIS ROTATES THE TEXT*/
-  padding-top: 20px;
+p[data-action="lose"] {
+	display: none;
 }
 
-li:first-child {
-  transform: rotate(0deg);
+.active {
+	opacity: 1 !important;
 }
 
-li:nth-child(2) {
-  transform: rotate(90deg);
+.clearfix {
+	width: 100%;
+	clear: both;
 }
 
-li:nth-child(3) {
-  transform: rotate(180deg);
+.wrapper {
+	width: 540px;
+	margin: 0 auto;
+}
+.container {
+	width: 300px;
 }
 
-li:nth-child(4) {
-  transform: rotate(270deg);
+.simon {
+	background: white;
+	position: relative;
+	float: left;
+	width: 300px;
+	height: 300px;
+	-webkit-border-radius: 150px 150px 150px 150px;
 }
 
-li:first-child .text {
-  background: blue;
+.tile {
+	opacity: 0.6;
+	-webkit-transition: opacity 250ms ease;
 }
 
-li:nth-child(2) .text {
-  background: grey;
+.tile.lit {
+	opacity: 1;
 }
 
-li:nth-child(3) .text {
-  background: aqua;
+.red, .blue, .yellow, .green {
+	height: 300px;
+	-webkit-border-radius: 150px 150px 150px 150px;
+	position: absolute;
+	text-indent: 10000px;
 }
 
-li:nth-child(4) .text {
-  background: white;
+.red:hover, .blue:hover, .yellow:hover, .green:hover {
+	border: 2px solid black;
 }
 
+.red {
+	background: darkgrey;
+	clip: rect(0px, 300px, 150px, 150px);
+	width: 300px;
+}
+
+.blue {
+	background: blue;
+	clip: rect(0px, 150px, 150px, 0px);
+	width: 300px;
+}
+
+.yellow {
+	background: grey;
+	clip: rect(150px, 150px, 300px, 0px);
+	width: 300px;
+}
+
+.green {
+	background: darkblue;
+	clip: rect(150px,300px, 300px, 150px);
+	width: 300px;
+}
+
+.game-info {
+	margin-top: 90px;
+}
+
+.game-info button {
+	width: 5em;
+	box-sizing: border-box;
+	font-size: 1.4em;
+	-webkit-border-radius: 10px 10px 10px 10px;
+	background: #6DABE8;
+	border: none;
+	padding: 0.3em 0.6em;
+}
+
+
+.hoverable:hover {
+	cursor: pointer;
+}
+
+footer {
+	position: absolute;
+	bottom: 20px;
+	width: 540px;
+	clear: both;
+	text-align: center;
+}
 
 
 
