--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -15,7 +15,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <!-- On My Tab -->
   <link rel="stylesheet" type="text/css" href="/static/CSS/style.css">
+
   <script src="/static/JS/script.js"></script>
+
 </head>
 <body>
 
@@ -69,32 +71,34 @@
 <!-- LOGIN FORM -->
 
 
-<div class='col-sm-12 simon-says'>
 <!-- SIMON SAYS GAME -->
-  <ul class='simon-says-circle'>
-    <li>
-      <div class='text'></div>
-    </li>
-    <li>
-      <div class='text'></div>
-    </li>
-    <li>
-      <div class='text'></div>
-    </li>
-    <li>
-      <div class='text'></div>
-    </li>
-  </ul>
-<!-- SIMON SAYS GAME -->
-</div>
+  <div class="wrapper">
+      <div class="game-board">
+        <div class="simon">
+          <ul>
+            <li class="tile red" data-tile="1"></li>
+            <li class="tile blue" data-tile="2"></li>
+            <li class="tile yellow" data-tile="3"></li>
+            <li class="tile green" data-tile="4"></li>
+          </ul>
+        </div>
+      </div>
+      <div class="game-info">
+        <h2>Round: <span data-round="0">0</span></h2>
+        <button data-action="start" >Start</button>
+        <p data-action="lose">Sorry, you lost after <span data-round="0"></span> rounds!</p>
+      </div>
+  
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+    ga('create', 'UA-37765307-2', 'kellyking.me');
+    ga('send', 'pageview');
 
-
-
-
-
-
-
+  </script>
 
 </body>
 </html>
