--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -176,17 +176,16 @@ p[data-action="lose"] {
 	clear: both;
 }
 
-.wrapper {
-	width: 540px;
-	margin: 0 auto;
-}
 .container {
 	width: 300px;
 }
 
+.game-board {
+	padding-top: 100px;
+	padding-bottom: 40px;
+}
 .simon {
 	background: white;
-	position: relative;
 	float: left;
 	width: 300px;
 	height: 300px;
@@ -238,10 +237,13 @@ p[data-action="lose"] {
 }
 
 .game-info {
-	margin-top: 90px;
+	text-align: center;
+	padding-top: 40px;
 }
 
 .game-info button {
+	padding-top: 40px;
+	text-align: center;
 	width: 5em;
 	box-sizing: border-box;
 	font-size: 1.4em;
@@ -250,7 +252,6 @@ p[data-action="lose"] {
 	border: none;
 	padding: 0.3em 0.6em;
 }
-
 
 .hoverable:hover {
 	cursor: pointer;
@@ -263,6 +264,7 @@ footer {
 	clear: both;
 	text-align: center;
 }
+
 
 
 
