--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,22 +26,16 @@
 
 <div id="tripmeter">
   <p>
-    Starting Location (lat, lon):<br/>
-    <span id="startLat"></span>°, <span id="startLon"></span>°
-  </p>
-  <p>
     Current Location (lat, lon):<br/>
     <span id="currentLat">???</span>°, <span id="currentLon">???</span>°
   </p>
-  <p>
-    Distance from starting location:<br/>
-    <span id="distance">0</span> miles
-  </p>
-</div>
 </div>
 
-
-<%= yelpResults %>
+<div class='location'>
+<% for (var i=0; i<yelpResults.length; i++) { %>
+<%= yelpResults[i].name %>
+<% }; %>
+</div>
 
 </body>
 
