deleted all http and https to avoid heroku issue -thanks Travis

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,19 +8,19 @@
 
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <!-- jQuery -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.js'></script>
+  <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.js'></script>
   <!-- Bootstrap CSS -->
-  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'>
+  <link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'>
   <!-- Bootstrap JS -->
-  <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js'></script>
+  <script src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js'></script>
   <!-- On My Tab -->
   <link rel='stylesheet' type='text/css' href='/static/CSS/style.css'>
 
   <script src='/static/JS/script.js'></script>
 
-  <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAxW6mI3rFiz6445noXGmTEr0ZAESRcxxg'></script>
+  <script src='//maps.googleapis.com/maps/api/js?key=AIzaSyAxW6mI3rFiz6445noXGmTEr0ZAESRcxxg'></script>
 
-  <script src='http://google-maps-utility-library-v3.googlecode.com/svn/trunk/infobubble/src/infobubble.js'></script>
+  <script src='//google-maps-utility-library-v3.googlecode.com/svn/trunk/infobubble/src/infobubble.js'></script>
 
 </head>
 <body>
@@ -86,7 +86,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><img width='20' height='20' src='http://s4.postimg.org/eligxlw5p/Martini_Logo.png'></a>
+      <a class="navbar-brand" href="#"><img width='20' height='20' src='//s4.postimg.org/eligxlw5p/Martini_Logo.png'></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
